--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.4",
     "sass": "^1.65.1",
     "swiper": "^10.1.0",
     "typescript": "^4.9.5"
