--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "classnames": "^2.3.2",
+    "date-fns": "^2.30.0",
     "react": "^18.2.0",
+    "react-day-picker": "^8.8.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-scripts": "5.0.1",
